--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
   app:
     build: .
     ports:
       - "8080:8080"   # /ping
       - "8000:8000"   # /metrics
-    container_name: simple-go-app
+    container_name: go-metrics-sample
