--- a/.github/workflows/buildpush.yaml
+++ b/.github/workflows/buildpush.yaml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/simple-go-app:latest
+          tags: ghcr.io/${{ github.repository_owner }}/go-metrics-sample:latest
